--- a/LeaniM/Atoms/compras.html
+++ b/LeaniM/Atoms/compras.html
@@ -15,8 +15,9 @@
   <link rel="stylesheet" href="../Atoms/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
   <link rel="stylesheet" href="../Atoms/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="../Atoms/plugins/jqvmap/jqvmap.min.css">
+  <!-- DataTables -->
+  <link rel="stylesheet" href="../Atoms/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="../Atoms/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../Atoms/dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
@@ -191,7 +192,7 @@
               <!-- general form elements -->
               <div class="card card-warning">
                 <div class="card-header">
-                  <h3 class="card-title">Compras</h3>
+                  <h3 class="card-title">Crear compra</h3>
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="card-refresh"
                       data-source="clientes.html" data-source-selector="#card-refresh-content"
@@ -204,35 +205,36 @@
                 <div class="card-body">
                   <form role="form" id="formCompras">
                     <div class="row">
-                      <div class="col-sm-3">
+                      <div class="col-sm-2">
                         <!-- text input -->
                         <div class="form-group">
-                          <label>Proveedor</label>
-                          <input type="text" class="form-control" placeholder="Ingrese nombre del proveedor ..."
-                            id="proveedor" required>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <!-- text input -->
-                        <div class="form-group">
-                          <label>Razón Social</label>
-                          <input type="text" class="form-control" value="Razón Social" id="razonSocial" readonly>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <!-- select -->
-                        <div class="form-group">
-                          <label>*Rubro</label>
-                          <select class="form-control" id="rubro">
-                            <option>Rubro por defecto</option>
-                            <option>Rubro 2</option>
-                            <option>Rubro 3</option>
-                            <option>Rubro 4</option>
-                            <option>Rubro 5</option>
+                          <label>Nombre del Proveedor</label>
+                          <select type="text" class="form-control" id="listaProveedores" required>
                           </select>
                         </div>
                       </div>
-                      <div class="col-sm-1">
+                      <div class="col-sm-2">
+                        <!-- text input -->
+                        <div class="form-group">
+                          <label>Razón Social</label>
+                          <input type="text" class="form-control" id="condicion" readonly>
+                        </div>
+                      </div>
+                      <div class="col-sm-2">
+                        <!-- text input -->
+                        <div class="form-group">
+                          <label>Condición Fiscal</label>
+                          <input type="text" class="form-control" id="razonSocial" readonly>
+                        </div>
+                      </div>
+                      <div class="col-sm-2">
+                        <!-- text input -->
+                        <div class="form-group">
+                          <label>Tipo</label>
+                          <input type="text" class="form-control" id="tipo" readonly>
+                        </div>
+                      </div>
+                      <div class="col-sm-2">
                         <!-- text input -->
                         <div class="form-group">
                           <label>N° Factura</label>
@@ -244,25 +246,25 @@
                         <div class="form-group">
                           <label>Fecha Facturación</label>
                           <input type="date" class="form-control datetimepicker-input" data-target="#timepicker" name=""
-                            value="" id="fechaFc">
+                            value="" id="fechaFc" required>
                         </div>
                       </div>
                     </div>
                     <div id="listaProductos">
                       <div class="row" id="columnaProducto">
-                        <div class="col-sm-3">
+                        <div class="col-sm-2">
                           <!-- text input -->
                           <div class="form-group">
                             <label>Producto</label>
-                            <input type="text" class="form-control" placeholder="Ingrese nombre del producto ..."
-                              id="producto" required>
+                            <select type="text" class="form-control" name="listaProductos" id="listaProductos" required>
+                            </select>
                           </div>
                         </div>
                         <div class="col-sm-2">
                           <!-- text input -->
                           <div class="form-group">
                             <label>Marca</label>
-                            <input type="text" class="form-control" placeholder="Ingrese la marca" id="marca">
+                            <input type="text" class="form-control" id="marca" readonly>
                           </div>
                         </div>
                         <div class="col-sm-2">
@@ -285,7 +287,7 @@
                             <input type="number" class="form-control" min="1" value="1" id="cantidad" required>
                           </div>
                         </div>
-                        <div class="col-sm-1">
+                        <div class="col-sm-2">
                           <!-- text input -->
                           <div class="form-group">
                             <label>Subtotal</label>
@@ -298,7 +300,7 @@
                           <div class="form-group">
                             <label>IVA %</label>
                             <div class="input-group">
-                              <input type="number" class="form-control" placeholder="21" value="" id="iva" readonly>
+                              <input type="number" class="form-control" value="" id="iva" readonly>
                               <div class="input-group-append">
                                 <span class="input-group-text">%</span>
                               </div>
@@ -334,157 +336,42 @@
               <!-- /.card -->
             </div>
             <div class="col-12">
-              <div class="card">
+              <div class="card card-warning">
                 <div class="card-header">
-                  <div class="input-group float-left" style="width: 275px;">
-                    <input type="text" name="table_search" class="form-control float-right"
-                      placeholder="Buscar Material">
-                    <div class="input-group-append mr-3">
-                      <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                    </div>
-                  </div>
+                  <h3 class="card-title">Lista de Compras</h3>
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="card-refresh"
-                      data-source="clientes.html" data-source-selector="#card-refresh-content"
+                      data-source="compras.html" data-source-selector="#card-refresh-content"
                       data-load-on-init="false"><i class="fas fa-sync-alt"></i></button>
                     <button type="button" class="btn btn-tool" data-card-widget="collapse"><i
                         class="fas fa-minus"></i></button>
                   </div>
                 </div>
                 <!-- /.card-header -->
-                <div class="card-body table-responsive p-0" style="height: 50vh;">
-                  <table class="table table-head-fixed text-nowrap">
+                <div class="card-body table-responsive">
+                  <table class="table table-head-fixed text-nowrap" id="tablaCompras">
                     <thead>
                       <tr>
-                        <th style="width: 50px">ID Prov NP</th>
+                        <th style="width: 80px">Fecha Facturación</th>
+                        <th style="width: 80px">Nº de Factura</th>
                         <th>Nombre del Proveedor</th>
-                        <th>Material</th>
-                        <th>Precio</th>
-                        <th style="width: 150px">Panel Proveedor</th>
+                        <th>Rubro</th>
+                        <th>Productos</th>
+                        <th style="width: 60px">Total</th>
+                        <th style="width: 80px">Panel Compra</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <tfoot>
                       <tr>
-                        <td>3</td>
-                        <td>Proveedor X</td>
-                        <td>Material del Prov X</td>
-                        <td>159</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
+                        <th style="width: 80px">Fecha Facturación</th>
+                        <th style="width: 80px">Nº de Factura</th>
+                        <th>Nombre del Proveedor</th>
+                        <th>Rubro</th>
+                        <th>Productos</th>
+                        <th style="width: 60px">Total</th>
+                        <th style="width: 80px">Panel Compra</th>
                       </tr>
-                      <tr>
-                        <td>9</td>
-                        <td>Proveedor Y</td>
-                        <td>Material del proveedor Y</td>
-                        <td>250</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>7</td>
-                        <td>Proveedor Z</td>
-                        <td>Materiales de Z</td>
-                        <td>375</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>5</td>
-                        <td>Proveedor X</td>
-                        <td>Material del Prov X</td>
-                        <td>159</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>Proveedor Y</td>
-                        <td>Material del proveedor Y</td>
-                        <td>250</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>Proveedor Z</td>
-                        <td>Materiales de Z</td>
-                        <td>375</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>Proveedor X</td>
-                        <td>Material del Prov X</td>
-                        <td>159</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>5</td>
-                        <td>Proveedor Y</td>
-                        <td>Material del proveedor Y</td>
-                        <td>250</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>Proveedor Z</td>
-                        <td>Materiales de Z</td>
-                        <td>375</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>Proveedor X</td>
-                        <td>Material del Prov X</td>
-                        <td>159</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>Proveedor Y</td>
-                        <td>Material del proveedor Y</td>
-                        <td>250</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>Proveedor Z</td>
-                        <td>Materiales de Z</td>
-                        <td>375</td>
-                        <td>
-                          <a class="btn btn-sm btn-warning" href="#">Modificar
-                            <i class="fa fa-edit"></i></a>
-                        </td>
-                      </tr>
-                    </tbody>
+                    </tfoot>
                   </table>
                 </div>
                 <!-- /.card-body -->
@@ -516,15 +403,11 @@
   </script>
   <!-- Bootstrap 4 -->
   <script src="../Atoms/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="../Atoms/plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="../Atoms/plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="../Atoms/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="../Atoms/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="../Atoms/plugins/jquery-knob/jquery.knob.min.js"></script>
+  <!-- DataTables -->
+  <script src="../Atoms/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="../Atoms/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="../Atoms/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="../Atoms/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
   <!-- daterangepicker -->
   <script src="../Atoms/plugins/moment/moment.min.js"></script>
   <script src="../Atoms/plugins/daterangepicker/daterangepicker.js"></script>
@@ -536,40 +419,9 @@
   <script src="../Atoms/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../Atoms/dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../Atoms/dist/js/pages/dashboard.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="../Atoms/dist/js/demo.js"></script>
-  <script>
-    var listaProductos = document.getElementById('listaProductos');
-    var count = 1;
-
-    function addProduct() {
-      var clon = listaProductos.firstElementChild.cloneNode(true);
-      clon.id = "columnaProducto" + count;
-      for (var i = 0; i < clon.getElementsByTagName('input').length; i++) {
-        clon.getElementsByTagName('input')[i].id = listaProductos.getElementsByTagName('input')[i].id + count;
-        clon.getElementsByTagName('input')[i].value = "";
-      }
-      listaProductos.appendChild(clon);
-      count++;
-      document.getElementById('borrarProducto').style.display = "inline-block";
-    }
-
-    function deleteProduct() {
-      if (listaProductos.lastChild != listaProductos.firstElementChild) {
-        listaProductos.lastChild.remove();
-        count--;
-        hideDelete(listaProductos);
-      }
-    }
-
-    function hideDelete(e) {
-      if (count == 1) {
-        document.getElementById('borrarProducto').style.display = "none";
-      }
-    }
-  </script>
+  <script src="../Atoms/compras.js"></script>
 </body>
 
 </html>
